Bug 549988 - Better align menupopups with bookmark toolbar buttons. r=mstange
UltraBlame original commit: 14feaa4712a056b67978490c67ed89b7a2cf2922

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -1681,6 +1681,30 @@ rgba
 )
 ;
 }
+toolbarbutton
+.
+bookmark
+-
+item
+>
+menupopup
+{
+margin
+-
+top
+:
+2px
+;
+-
+moz
+-
+margin
+-
+start
+:
+3px
+;
+}
 .
 bookmark
 -
